[package]
name = "cheetah-game-realtime-protocol"
version = "999.999.999"
authors = ["kviring <alex@kviring.com>"]
edition = "2021"
license="MIT"
description="UDP based Protocol with different guarantees. For PVP/PVE games and others."

[dependencies]
lazy_static = "1.4.0"
rand = { version = "0.8.5", features = ['min_const_gen'] }
snap = "1.1.0"
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["heapless", "reduced-round"] }
generic-array = "1.0.0"
heapless = "0.7.16"
fnv = "1.0.7"
thiserror = "1.0.40"
tracing = "0.1.37"
log = "0.4.17"
tracing-log = "0.2.0"
tracing-core = "0.1.30"
num-derive = "0.4.0"
num-traits = "0.2.16"
serde = { version = "1.0.180", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

